2025-09-23T12:52:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17946759652 # 1240
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 15 44
* notice: prev accum: outdated-unq outdated-all / unq all: 1205 5892 / 1219 5928
* notice: next accum: outdated-unq outdated-all / unq all: 1205 5892 / 1222 5936
* notice: prev exec diff / last date diff / accum: unq all: +3 +8 -0 -0 / +3 +8 -0 -0 / 3 8
* notice: removed / changed dates: [] / [2025-09-23]

2025-09-23T01:53:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17933538225 # 1239
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1205 5892 / 1216 5915
* notice: next accum: outdated-unq outdated-all / unq all: 1205 5892 / 1219 5928
* notice: prev exec diff / last date diff / accum: unq all: +3 +13 -0 -0 / +3 +13 -0 -0 / 3 13
* notice: removed / changed dates: [] / [2025-09-22]

2025-09-22T02:04:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17902403239 # 1237
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 11 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1204 5890 / 1216 5915
* notice: next accum: outdated-unq outdated-all / unq all: 1205 5892 / 1216 5915
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-07] / []

2025-09-21T12:47:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17893828004 # 1236