@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-23T12:52:02Z",
-  "count_outdated" : 5892,
-  "uniques_outdated" : 1205,
+  "timestamp" : "2025-09-24T01:55:17Z",
+  "count_outdated" : 5894,
+  "uniques_outdated" : 1206,
   "count" : 5936,
   "uniques" : 1222,
   "views" : [
-    {
-      "timestamp": "2025-09-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-11T00:00:00Z",
       "count": 1,
