@@ -1,12 +1,7 @@
 {
-  "count": 44,
-  "uniques": 15,
+  "count": 42,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2025-09-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-11T00:00:00Z",
       "count": 1,
